--- a/css/japan.css
+++ b/css/japan.css
@@ -1,8 +1,8 @@
-main > * {
+/* main > * {
 	background-color: goldenrod;
 	padding: 1px;
 	font-size 3em;
-}
+} */
 
 .container-banner{
 	position: relative;
